# mc-extensions

./: COPYING  Makefile.am  README  configure.ac
src/syslog/: syslog_extension.c  syslog_extension.h  syslog_test.c
